--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,15 +1,15 @@
 # main links
 main:
-  - title: "Revese Enginnering"
-    url: /categories/#revese-enginnering
-  - title: "Malware Analysis"
-    url: /categories/#malware-analysis
-  - title: "CTF Writeups"
-    url: /categories/#ctf-writeups
-  - title: "Tutorials"
-    url: /categories/#tutorials
-  - title: "All Categories"
-    url: /categories
+  #- title: "Revese Enginnering"
+   # url: /categories/#revese-enginnering
+  #- title: "Malware Analysis"
+    #url: /categories/#malware-analysis
+  #- title: "CTF Writeups"
+    #url: /categories/#ctf-writeups
+  #- title: "Tutorials"
+   # url: /categories/#tutorials
+  #- title: "All Categories"
+   # url: /categories
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
