--- a/_config.yml
+++ b/_config.yml
@@ -101,13 +101,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      #url: ""
+      url: "mohamedhassanali772@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      #url: ""
+      url: "https://twitter.com/muhax2mad"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -116,7 +116,7 @@ author:
       url: "https://www.linkedin.com/in/muhammadhasanali/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      #url: ""
+      url: "https://github.com/muha2xmad"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
