--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ google:
   search_engine_id       : # YOUR_SEARCH_ENGINE_ID
   instant_search         : # false (default), true
 # SEO Related
-#google_site_verification : ""
+google_site_verification : "yjK5jUGtGuvD9i_1SEaec8FrngezWj1KJqBbPuPRAQM"
 bing_site_verification   :
 yandex_site_verification :
 naver_site_verification  :
