--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ social:
 analytics:
   provider               : "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "G-WTCTJGFRDZ"
+    tracking_id          : "UA-216485242-1"
     anonymize_ip         : # true, false (default)
 
 
