--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Muhammad Hasan Ali"
   avatar           : /assets/images/site/av.jfif # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Undergraduate Malware Analyst"
+  bio              : "Malware Analysis learner"
   location         : "Egypt"
   email            :
   links:
