--- a/_config.yml
+++ b/_config.yml
@@ -280,5 +280,5 @@ defaults:
       author_profile: true
       read_time: true
       comments: false
-      share: false
+      share: true
       related: false
