--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "muha2xmad"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Muhammad Hasan Ali"
-description              : "Blue team advetures "
+description              : "Blue team adventures "
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
