--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "muha2xmad"
+title                    : "nosycod"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Muhammad Hasan Ali"
-description              : "Blue team adventures "
+name                     : "Ricardo M Pereira"
+description              : "Cyber Threat Intelligence amateur"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -93,30 +93,30 @@ analytics:
 
 # Site Author
 author:
-  name             : "Muhammad Hasan Ali"
+  name             : "Ricardo Pereira"
   avatar           : /assets/images/site/av.jfif # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Malware Analysis learner"
-  location         : "Egypt"
+  bio              : "Cyber Threat Intelligence amateur"
+  location         : "Portugal"
   email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:mohamedhassanali772@gmail.com"
+      url: "mailto:ricardo.fm.pereira@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/muha2xmad"
+      # url: "https://twitter.com/muha2xmad"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/muhammadhasanali/"
+      url: "https://www.linkedin.com/in/ricardo-m-pereira-8521b8142/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/muha2xmad"
+      # url: "https://github.com/muha2xmad"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
