--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,10 @@
 # main links
 
 main:
-  - title: "Malware analysis"
-    url: /categories/#Malware-analysis
-  - title: "Unpacking"
-    url: /categories/#Unpacking
-  - title: "Mal Documents"
-    url: /categories/#Mal-Document
+  - title: "whoami"
+    url: /categories/#whoami
+  - title: "Threat Intel"
+    url: /categories/#Threat Intelligence
   #- title: "CTF Writeups"
     #url: /categories/#ctf-writeups
   #- title: "Tutorials"
