--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "nosycod"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Ricardo M Pereira"
-description              : "Cyber Threat Intelligence amateur"
+description              : "Threat Intelligence amateur"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
