--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ricardo Pereira"
+  name             : "Ricardo M Pereira"
   avatar           : /assets/images/site/av.jfif # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Cyber Threat Intelligence amateur"
   location         : "Portugal"
