--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 # main links
 
 main:
-  - title: "threat intel"
+  - title: "terrible threat intel"
     url: /categories/#Threat-Intelligence
   - title: "malware analysis"
     url: /categories/#Malware-Analysis
