--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "nosycod"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Ricardo M Pereira"
-description              : "Threat Intelligence amateur"
+description              : "Android RE rookie"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Ricardo M Pereira"
   avatar           : /assets/images/site/av.jfif # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Cyber Threat Intelligence amateur"
+  bio              : "Android RE rookie"
   location         : "Portugal"
   email            :
   links:
