--- a/_config.yml
+++ b/_config.yml
@@ -102,9 +102,9 @@ author:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       # url: "mailto:ricardo.fm.pereira@gmail.com"
-    - label: "Website"
+    - label: "CyberDefenders"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://cyberdefenders.org/p/ricardofmp"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
