added more links

--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,12 @@ author:
     - label: "CyberDefenders"
       icon: "fas fa-fw fa-link"
       url: "https://cyberdefenders.org/p/ricardofmp"
+    - label: "BlueTeamLabs"
+      icon: "fas fa-fw fa-link"
+      url: "https://blueteamlabs.online/home/user/3881d02db0868f6ec6d3cf"
+    - label: "TryHackMe"
+      icon: "fas fa-fw fa-link"
+      url: "https://tryhackme.com/p/ricardofmpIU"       
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
