--- a/_config.yml
+++ b/_config.yml
@@ -104,13 +104,13 @@ author:
       # url: "mailto:ricardo.fm.pereira@gmail.com"
     - label: "CyberDefenders"
       icon: "fas fa-fw fa-link"
-      url: "https://cyberdefenders.org/p/ricardofmp"
+      # url: "https://cyberdefenders.org/p/ricardofmp"
     - label: "BlueTeamLabs"
       icon: "fas fa-fw fa-link"
-      url: "https://blueteamlabs.online/home/user/3881d02db0868f6ec6d3cf"
+      # url: "https://blueteamlabs.online/home/user/3881d02db0868f6ec6d3cf"
     - label: "TryHackMe"
       icon: "fas fa-fw fa-link"
-      url: "https://tryhackme.com/p/ricardofmpIU"       
+      # url: "https://tryhackme.com/p/ricardofmpIU"       
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
